--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,600&display=swap"
       rel="stylesheet"
     />
-    <title>React Recipe App</title>
+    <title>Cookd Website</title>
   </head>
   <body>
     <div id="root"></div>
